--- a/aks-wi-env-check/pod.yaml
+++ b/aks-wi-env-check/pod.yaml
@@ -8,7 +8,10 @@ metadata:
 spec:
   containers:
   - name: aks-wi-env-check-container
-    image: m8yng/aks-wi-env-check:latest # Replace with your Docker Hub image
+    image: m8yng/aks-wi-env-check:latest # Replace with your registry if needed
     imagePullPolicy: Always
+    env:
+    - name: LANG_EXT
+      value: "py" # Change to go to validate through azure-sdk-for-go
   serviceAccountName: workload-identity-sa # Change this to the appropriate service account name
   restartPolicy: Always
